--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="utf-8">
     <title>Odin Recipes</title>
 </head>
+
 <body>
 
     <h1>Odin Recipes</h1>
+    
+    <a href="./recipes/pulled_chicken.html">Pulled Chicken Burger</a>
 
 </body>
 
