--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
 
     <h1>Odin Recipes</h1>
-    
-    <a href="./recipes/pulled_chicken.html">Pulled Chicken Burger</a>
-
+    <ul>
+        <li><a href="./recipes/pulled_chicken.html">Pulled Chicken Burger</a></li>
+        <li><a href="./recipes/chicken_piquant.html">Chicken Piquant</a></li>
+        <li><a href="./recipes/garlic_shrimps.html">Garlic Shrimps</a></li>
+    </ul>
 </body>
 
 </html>
